force-app/main/default/objects/Access_Card_Inventory__c/Access_Card_Inventory__c.object-meta.xml
<CustomObject>
    <label>Access Card Inventory</label>
    <nameField>
        <label>Access Card Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Access Card Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>