force-app/main/default/objects/Access_Card_Inventory__c/fields/Assigned_Access_Card__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Access_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Access Card</label>
    <referenceTo>Access_Card__c</referenceTo>
    <relationshipLabel>Assigned Access Card</relationshipLabel>
    <relationshipName>Inventory_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>