force-app/main/default/objects/Access_Card_Inventory__c/fields/Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Card_Number__c</fullName>
    <externalId>true</externalId>
    <label>Card Number</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>